--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,12 +2,24 @@
 
     @mixin clearFix;
 
+    &--t-padding {
+        padding-top: 80px;
+    }
+
     &--gutters {
-        padding-right: -65px;
+        margin-right: -65px;
     }
 
     &--gutters-large > div {
         padding-right: 100px;
+    }
+
+    &--gutters-small {
+        margin-right: -45px;
+    }
+
+    &--gutters-small > div {
+        padding-right: 45px;
     }
 
     &--gutters > div {
@@ -46,5 +58,58 @@
             margin-bottom: 0;
         }
     }
+    @mixin atLarge {
+        &__Large-4 {
+            float: left;
+            width: 33.33%;
+        }
 
+        &__Large-4--larger {
+            width: 37%;
+        }
+
+        &__Large-6 {
+            width: 50%;
+            float: left;
+        }
+
+        &__Large-8 {
+            float: left;
+            width: 66.66%;
+        }
+
+        &__Large-8--larger {
+            width: 63%;
+        }
+
+        &__b-margin-until-Large {
+            margin-bottom: 0;
+        }
+    }
+
+
+    /*Begin Equal Height Rules*/
+    &--equal-height-at-medium {
+
+        @mixin atMedium {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+
+    &--equal-height-at-large {
+
+        @mixin atLarge {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
 }
