--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,13 +1,31 @@
 .wrapper {
-    padding-left: 18px;
     overflow: hidden;
-    padding-right: 18px;
     max-width: 1236px;
     margin-left: auto;
     margin-right: auto;
 
     &--medium {
         max-width: 976px
+    }
+
+    &--no-padding-until-medium {
+        padding-right: 0;
+        padding-left: 0;
+
+        @mixin atMedium {
+            padding-left: 18px;
+            padding-right: 18px;
+        }
+    }
+
+    &--no-padding-until-large {
+        padding-right: 0;
+        padding-left: 0;
+
+        @mixin atLarge {
+            padding-left: 18px;
+            padding-right: 18px;
+        }
     }
 
     &--b-margin {
