Fixed mobile layout

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,6 +10,10 @@
         margin-right: -65px;
     }
 
+    &--gutters-large {
+        margin-right: -100px;
+    }
+
     &--gutters-large > div {
         padding-right: 100px;
     }
@@ -26,11 +30,13 @@
         padding-right: 65px;
     }
 
+
     &__b-margin-until-medium {
         margin-bottom: 1rem;
     }
 
     @mixin atMedium {
+        
         &__medium-4 {
             float: left;
             width: 33.33%;
