--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -27,7 +27,7 @@
         font-size: 2.4rem;
 
         @mixin atSmall  {
-            font-size: 4.8rem
+            font-size: 4.8rem;
         }
     }
 
@@ -38,7 +38,7 @@
         margin: 0;
 
         @mixin atSmall  {
-            font-size: 2rem
+            font-size: 2.9rem;
         }
     }
 
