--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -1,4 +1,4 @@
-/*Do not edit modules/_prite derictly as it is generated automatically by gulp.
+/*Do not edit modules/_sprite directly as it is generated automatically by gulp.
 instead edit gulp/templates/sprite*/
 
         .icon {
