--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -4,7 +4,11 @@
     margin-bottom: 98px;
 
     @mixin atLarge {
+        margin-bottom: 0;
         padding: 0 1.8125rem 1px  1.8125rem;
+    }
+
+    &--last {
         margin-bottom: 0;
     }
 
@@ -30,11 +34,8 @@
     &__subtitle {
         color: $mainOrange;
         text-align: center;
+        font-weight: 400;
         font-size: 0.9375rem;
         margin: .25rem 0 1rem 0;
-    }
-
-    &--last {
-        margin-bottom: 0;
     }
 }
